Fixed spacing issue in navbar dropdown

--- a/mystyle.css
+++ b/mystyle.css
@@ -142,6 +142,14 @@ font-size: 20px;
 	display:table;
 	background-color:#1A1A1A;
 	background:#1A1A1A;
+	}
+	
+	.navbar-brand { 
+	color: #FFFFFF;
+	font-size: 20px;
+	font-family: 'Saira', sans-serif;
+	background-color: #1A1A1A;
+	font-weight: bold;
 }
 	
 	
